--- a/.github/workflows/cicd-workflow.yaml
+++ b/.github/workflows/cicd-workflow.yaml
@@ -11,3 +11,13 @@ jobs:
       - name: 'Start build job'
         run: |
           echo "Starting the build job."
+      
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+
+      - name: 'Setup go'
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.13.1'
+        run: |
+          go version
