--- a/.github/workflows/cicd-workflow.yaml
+++ b/.github/workflows/cicd-workflow.yaml
@@ -16,8 +16,7 @@ jobs:
         uses: actions/checkout@v2.3.4
 
       - name: 'Setup go'
-        uses: actions/setup-go@v2
+      - uses: actions/setup-go@v2
         with:
           go-version: '^1.13.1'
-        run: |
-          go version
+      - run: go version
